--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			#messages {list-style-type: none; margin: 0; padding: 0;}
 			#messages li {padding: 5px 10px;}
 			#messages li:nth-child(odd) {background: #eee;}
+			form#userNameForm {position:absolute; top: 0px; right: 0px;}
 
 
 		</style>
@@ -21,12 +22,24 @@
 		<form id="messageBox" action="">
 			<input id="m" autocomplete="off" /><button>Send</button>
 		</form>
+
+		<form id="userNameForm">
+			<input id="userNameBox" autocomplete="off" /><button>Set Name</button>
+		</form>
+
 		<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 		<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 		<script>
 			var userName = "Daniel";
 			var socket = io();
-			$('form').submit(function(){
+
+			$('form#userNameForm').submit(function(){
+				userName = $('#userNameBox').val();
+
+				return false;
+			});
+
+			$('form#messageBox').submit(function(){
 				socket.emit('chat message',{userName: userName, message: $('#m').val()} );
 				$('#m').val(''); //clear messagebox 
 				return false;
