--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			$('form#userNameForm').submit(function(){
 				userName = $('#userNameBox').val();
 
-				return false;
+				return false; //doesn't leave the page
 			});
 
 			$('form#messageBox').submit(function(){
